JPackage Maven Plugin 1.6.0
* Introduced jpackage version check for parameters
* Added:
    --jlink-options
    --linux-package-deps
    --bind-services
    --about-url
    --mac-app-store
    --mac-entitlements
    --mac-app-category
    --win-help-url
    --win-shortcut-prompt
    --win-update-url
    --app-content
    --mac-dmg-content
    --launcher-as-service